<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context="aeonlabs.serenity.MainActivity">

    <ImageView
        android:id="@+id/backgoundImage"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:contentDescription="@string/background_image"
        android:scaleType="centerCrop"
        android:src="@mipmap/background_6" />

    <aeonlabs.serenity.Helper.TextViewCoffeeService
        android:id="@+id/appTitle"
        fontPath="fonts/font-diner-coffee-service.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/app_name"
        android:textColor="@color/colorTitle"
        android:textSize="55sp"
        android:clickable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageButton
        android:id="@+id/silentTimerButton"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:background="@null"
        android:contentDescription="@string/timer_button_description"
        android:gravity="center"
        android:onClick="didTapTimerButton"
        android:scaleType="fitXY"
        android:src="@drawable/music_selection_icon"
        android:tag="0"
        android:text="@string/back"
        app:layout_constraintEnd_toEndOf="@+id/pickASessionTextView"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/pickASessionTextView"
        app:layout_constraintTop_toBottomOf="@+id/pickASessionTextView" />


    <aeonlabs.serenity.Helper.TextViewCoffeeService
        android:id="@+id/pickASessionTextView"
        fontPath="fonts/font-diner-coffee-service.otf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/pickASession"
        android:textColor="@color/colorTitle"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appTitle" />

    <ScrollView
        android:id="@+id/mainScrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="20dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/silentTimerButton">

        <LinearLayout
            android:id="@+id/buttonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center"
            android:orientation="vertical"/>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
